fix(text-preset): update letter-spacing

--- a/fonts.scss
+++ b/fonts.scss
@@ -37,14 +37,14 @@ $text-presets: (
         size: 0.8125em, // 13px
         weight: 500,
         line-height: 1.4,
-        letter-spacing: 0.12em,  
+        letter-spacing: 0.012em,  
         family: ("Manrope", Arial, Helvetica, sans-serif )
     ),
     "2--bold": (
         size: 0.8125em, // 13px
         weight: 700,
         line-height: 1.4,
-        letter-spacing: 0.12em, 
+        letter-spacing: 0.012em, 
         family: ("Manrope", Arial, Helvetica, sans-serif )
     ),
     "3": (
